feat: authentication update including exception handling and updated openapi docs
