# src/main/java/com/example/bp_spring_backend/domains/inputDTO/AuthenticationRequestDTO.java
@@ -1,5 +1,7 @@
 package com.example.bp_spring_backend.domains.inputDTO;
 
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
 import lombok.AllArgsConstructor;
 import lombok.Builder;
 import lombok.Data;
@@ -11,6 +13,9 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor
 public class AuthenticationRequestDTO {
 
+    @Email(message = "email must be valid email address")
+    @NotBlank(message = "email is required")
     private String email;
+    @NotBlank(message = "password is required")
     private String password;
 }
