# src/main/java/com/example/bp_spring_backend/domains/inputDTO/RegisterRequestDTO.java
@@ -1,20 +1,0 @@
-package com.example.bp_spring_backend.domains.inputDTO;
-
-import com.example.bp_spring_backend.domains.enums.RoleEnum;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@Data
-@Builder
-@AllArgsConstructor
-@NoArgsConstructor
-public class RegisterRequestDTO {
-
-    private String firstname;
-    private String lastname;
-    private String email;
-    private String password;
-    private RoleEnum roleEnum;
-}
