# src/main/java/com/example/bp_spring_backend/domains/outputDTO/AuthenticationResponseDTO.java
@@ -9,7 +9,7 @@ import lombok.NoArgsConstructor;
 @Builder
 @AllArgsConstructor
 @NoArgsConstructor
-public class AuthentificationResponseDTO {
+public class AuthenticationResponseDTO {
 
     private String token;
 }
