# src/main/java/com/example/bp_spring_backend/domains/outputDTO/ErrorResponseDTO.java
@@ -1,0 +1,21 @@
+package com.example.bp_spring_backend.domains.outputDTO;
+
+import com.fasterxml.jackson.annotation.JsonInclude;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.util.List;
+
+@Data
+@Builder
+@AllArgsConstructor
+@NoArgsConstructor
+@JsonInclude(JsonInclude.Include.NON_NULL)
+public class ErrorResponseDTO {
+
+    private int status;
+    private String message;
+    private List<String> errors;
+}
